--- a/CodingTest/Programmers/cs30_ls42584.md
+++ b/CodingTest/Programmers/cs30_ls42584.md
@@ -67,6 +67,7 @@ class Solution {
 private static int[] stock22(int[] prices) {
     int[] answer = new int[prices.length];
 
+    //LIFO
     Stack<int[][]> st = new Stack<int[][]>();
 
     for(int i=0; i<prices.length; i++) {
