--- a/CodingTest/Programmers/cs30_ls42839.md
+++ b/CodingTest/Programmers/cs30_ls42839.md
@@ -55,6 +55,7 @@ class Solution {
 //String numbers = "731";
 //dfs(0, "", numbers.split(""), list);
 
+static boolean[] check = new boolean[7];
 public static void dfs(int depth, String cur, String[] split, ArrayList<Integer> list){
     if(depth >split.length) return;
 
