--- a/Java/추상화_인터페이스.md
+++ b/Java/추상화_인터페이스.md
@@ -107,6 +107,8 @@ public static void main(String[] args) {
 - 디폴트메소드: 구현된 걸 쓰거나 재정의해서 사용하거나
   운영되던 시스템에 추가하면 유용하다. 추상 메소드로 추가 시 모든 implements에 추가 해야함
 - 인터페이스 자체는 인스턴스화 불가
+- 마커 인터페이스: 빈 껍데기로 생성하고 단순 타입 체크용
+  (Serializable, Cloneable 등)
 
 ```java
 public interface IntfSub {
@@ -196,4 +198,5 @@ public class IntfImpl2 implements MainIntf{
 
 [참고](https://inpa.tistory.com/entry/JAVA-%E2%98%95-%EC%9D%B8%ED%84%B0%ED%8E%98%EC%9D%B4%EC%8A%A4Interface%EC%9D%98-%EC%A0%95%EC%84%9D-%ED%83%84%ED%83%84%ED%95%98%EA%B2%8C-%EA%B0%9C%EB%85%90-%EC%A0%95%EB%A6%AC)
 
-- 추상화, 인터페이스 차이.
+- 추상화, 인터페이스 차이:
+  기능적 차이만 설명이 되어 있고 보통 활용을 같이 하는 걸로 보인다.
