--- a/Java/상속.md
+++ b/Java/상속.md
@@ -1,6 +1,6 @@
 # 상속
 
-### 상속 대신 합성(조합)을 사용하라고 한다.
+### 상속 대신 Composition을 사용하라고 한다.
 
 ### 접근 제어자
 
@@ -11,7 +11,7 @@
 3. protected: 2 + 클래스를 상속받은 다른 패키지의 클래스까지
 4. public: 3 + 전부
 
-### 상속
+## 상속
 
 - 다중 상속 불가
 - 상속 제한은 없다
@@ -146,3 +146,52 @@ public class BasicClassExtends extends BasicClass {
   }
 }
 ```
+
+## Composition
+
+- 합성, 조합 두 가지로 부르는 듯 하다.
+- 단점: 코드 가독성, 수평 관계, 코드 이해하는데 어려움이 있을 수 있다. 장점은 상속의 단점을 제외한 ..
+
+- 간단한 사용법
+
+```java
+class TestClass {
+
+}
+
+class UseClass {
+    private TestClass testClass;
+
+    public UseClass(TestClass testClass) {
+        this.testClass = testClass;
+    }
+}
+
+public class MainComposition {
+    public static void main(String[] args) {
+        UseClass useClass = new UseClass(new TestClass());
+    }
+}
+```
+
+### has a, is a
+
+- has a: 포함 A는 B를 포함한다.
+- is a: 상속 A는 B다. 새는 동물이다/코끼리는 동물이다.
+
+### 결합도, 응집도
+
+- 결합도는 낮을 수록 응집도는 높을 수록 좋다.
+  결합도가 높다면 A를 바꾸면 연관 된 B도 바꿔야 함
+  하나의 모듈에 기능을 모아두어 사용하기 편하게 해두면 응집도 높은 것<br>
+  [읽어보기](https://madplay.github.io/post/coupling-and-cohesion-in-software-engineering)
+
+---
+
+## 상속과 합성
+
+- 상속을 사용 하려면 클래스간 IS-A 관계만 구성될 수밖에 없을 때, 그 외 코드의 재사용 등이라면 합성을 사용
+- 상속은 클래스 폭발, 단일 상속 한계, 결합도 높음, 불필요한 기능 상속 등 여러가지의 문제가 있을 수 있다.
+- 추상화, 인터페이스를 활용하여 상속, 합성을 활용하는데 더 찾아봐야할 듯 하다.
+
+[읽어보기](https://inpa.tistory.com/entry/OOP-%F0%9F%92%A0-%EA%B0%9D%EC%B2%B4-%EC%A7%80%ED%96%A5%EC%9D%98-%EC%83%81%EC%86%8D-%EB%AC%B8%EC%A0%9C%EC%A0%90%EA%B3%BC-%ED%95%A9%EC%84%B1Composition-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0)
