Update 150370_개인정보 수집 유효기간.md

--- a/CodingTest/Programmers/B_150001_200000/150370_개인정보 수집 유효기간.md
+++ b/CodingTest/Programmers/B_150001_200000/150370_개인정보 수집 유효기간.md
@@ -4,7 +4,7 @@
 
 문제 링크: https://school.programmers.co.kr/learn/courses/30/lessons/150370
 
-- split 사용 시 "." 은 정규식에서 사용하여 문자로 인식하게 \\.
+- split 사용 시 "." 은 정규식에서 사용하여 문자로 인식하게 "\\."
 - 월 계산 시만 28일만 계산하고 문제는 29~31일이 나올거락 생각을 해서 다 나눠서 계산했다. 단순히 28일로 생각했다면 LocalDate로도 처리가 가능했다.
 
 ```java
