--- a/CodingTest/Programmers/Z_ETC/최소공배수 최대공약수.md
+++ b/CodingTest/Programmers/Z_ETC/최소공배수 최대공약수.md
@@ -1,35 +1,31 @@
-- 약수
+- 약수<br>
 어떤 수를 나누어 떨어뜨릴 수 있는 수
 
-- 소수
+- 소수<br>
 1과 자기 자신 이외에는 어떤 수로도 나누어 떨어지지 않는 수
-2, 3, 5, 7..
-
+2, 3, 5, 7..<br>
 구하는 방법은 에라토스테네스의 체가 알고리즘에 가정 최적화 되어 있다.
 소수를 구할 때는 n의 제곱근까지 구한다. 
 https://nahwasa.com/entry/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98-%EC%B2%B4-%ED%98%B9%EC%9D%80-%EC%86%8C%EC%88%98%ED%8C%90%EC%A0%95-%EC%8B%9C-%EC%A0%9C%EA%B3%B1%EA%B7%BC-%EA%B9%8C%EC%A7%80%EB%A7%8C-%ED%99%95%EC%9D%B8%ED%95%98%EB%A9%B4-%EB%90%98%EB%8A%94-%EC%9D%B4%EC%9C%A0
 
-- 최대공약수 (Greatest Common Divisor, GCD)
+- 최대공약수 (Greatest Common Divisor, GCD)<br>
 두 수의 공약수는 두 수 모두의 약수 중에서 공통적으로 포함하는 약수를 말합니다. 
-예를 들어, 12와 18의 공약수는 1, 2, 3, 6입니다. 여기서 가장 큰 공약수는 6입니다. 
+예를 들어, 12와 18의 공약수는 1, 2, 3, 6입니다. 여기서 가장 큰 공약수는 6입니다. <br> 12, 18의 약수를 구하고 공통 된 수.
+    > 유클리드 호제법
+    ```java
+    public int gcd(int a, int b) {
+        if (b == 0) return a;
+        return gcd(b, a % b);
+    }
+    ```
 
-12, 18의 약수를 구하고 공통 된 수.
-유클리드 호제법
-```java
-public int gcd(int a, int b) {
-    if (b == 0) return a;
-    return gcd(b, a % b);
-}
-```
-
-- 최소공배수 (Least Common Multiple, LCM)
+- 최소공배수 (Least Common Multiple, LCM)<br>
 공배수는 두 수의 배수 중에서 공통적으로 포함하는 가장 작은 배수를 의미합니다. 
-예를 들어, 12와 18의 공배수는 36, 72, 108 등이 있으며, 가장 작은 공배수는 36입니다. 
-
+예를 들어, 12와 18의 공배수는 36, 72, 108 등이 있으며, 가장 작은 공배수는 36입니다. <br><br>
 두 수의 최소공배수는 두 수의 곱을 그 두 수의 최대공약수(GCD)로 나눈 값과 같습니다.
-a * b / gcd(유클리드 호제법)
-```java
-public int lcm(int a, int b) {
-    return (a * b) / gcd(a, b);
-}
-```
+    > a * b / gcd(유클리드 호제법)
+    ```java
+    public int lcm(int a, int b) {
+        return (a * b) / gcd(a, b);
+    }
+    ```
