--- a/CodingTest/Programmers/A_10001_50000/43105_정수 삼각형.md
+++ b/CodingTest/Programmers/A_10001_50000/43105_정수 삼각형.md
@@ -11,9 +11,10 @@
 ---
 - chat gpt 그림 감사
 - 순서를 그리면 이렇게 된다.
-![alt text](../Img/43105_org.png)
-![alt text](../Img/43105_top.png)
-![alt text](../Img/43105_bottom.png)
+
+<img src="../Img/43105_org.png" width="300" height="300"/><br>
+<img src="../Img/43105_top.png" width="300" height="300"/>
+<img src="../Img/43105_bottom.png" width="300" height="300"/>
 
 ```java
 public static int downTest(int[][] triangle) {
