--- a/CodingTest/Programmers/Z_ETC/재귀.md
+++ b/CodingTest/Programmers/Z_ETC/재귀.md
@@ -2,7 +2,7 @@
 
 - chatgpt
 
-- 팩토리얼
+- 팩토리얼<br>
 팩토리얼 함수에서 재귀 호출을 사용할 때, 각 호출은 한 단계씩 더 깊은 재귀 단계로 들어갑니다. 이 과정에서 재귀 함수가 종료 조건인 `n <= 1`에 도달하면, 그때부터 각 단계에서 반환된 값이 이전 단계로 올라가면서 최종 결과를 구성합니다. 여기서 `n = 5`의 팩토리얼을 계산하는 과정을 단계별로 설명하겠습니다.
 
 ```java
@@ -53,7 +53,7 @@ public class Factorial {
 
 최종적으로 `factorial(5)` 호출은 `120`을 반환하며, 이는 `5!`의 값입니다. 이처럼 각 재귀 호출에서 반환된 값은 이전 호출의 결과와 결합되어 최종 결과를 형성하는 중요한 과정입니다.
 
-- 단순 곱
+- 단순 곱 (재귀 예시)
 ```java
 public static int zzzzzzzz(int n){
     if(n <= 1){
