--- a/CodingTest/Programmers/Z_ETC/재귀.md
+++ b/CodingTest/Programmers/Z_ETC/재귀.md
@@ -97,7 +97,6 @@ public static int zzzzzzzz(int n){
 
 최종적으로 `zzzzzzzz(5)` 호출은 `16`을 반환하며, 이는 각 단계에서 결과가 2배씩 증가한 것을 보여줍니다. 이 함수의 작동 원리는 간단하게 입력된 값에서 시작하여 1이 될 때까지 각 결과를 누적적으로 2배 증가시키는 구조입니다.
 
-
 - 피보나치
 ```java
 public static int naiveRecursion(int n){
@@ -142,7 +141,62 @@ public static int naiveRecursion(int n){
 
 최종적으로 `naiveRecursion(5)` 호출은 5를 반환합니다. 이러한 재귀적 접근은 매우 직관적이지만, 많은 중복 계산을 발생시키기 때문에 효율적이지 않습니다. 각 수치를 여러 번 계산하게 되므로, 이러한 문제는 동적 계획법이나 메모이제이션을 사용하여 효율적으로 해결할 수 있습니다.
 
-[설명링크](https://hongjw1938.tistory.com/47)
+```scss
+naiveRecursion(5)
+├── naiveRecursion(4)
+│   ├── naiveRecursion(3)
+│   │   ├── naiveRecursion(2)
+│   │   │   ├── naiveRecursion(1) = 1
+│   │   │   └── naiveRecursion(0) = 0
+│   │   └── naiveRecursion(1) = 1
+│   └── naiveRecursion(2)
+│       ├── naiveRecursion(1) = 1
+│       └── naiveRecursion(0) = 0
+└── naiveRecursion(3)
+    ├── naiveRecursion(2)
+    │   ├── naiveRecursion(1) = 1
+    │   └── naiveRecursion(0) = 0
+    └── naiveRecursion(1) = 1
+```
+
+[설명링크1](https://adjh54.tistory.com/201#google_vignette)
+바텀업
+```java
+private int dp(int n) {
+   if (n <= 1) {
+      return n;
+   }
+   
+   int[] arr = new int[n + 1];
+   arr[0] = 0;
+   arr[1] = 1;
+   
+   //0 1 1 2 3 5
+   for (int i = 2; i <= n; i++) {
+      arr[i] = arr[i - 1] + arr[i - 2];
+      System.out.println(Arrays.toString(arr));
+   }
+   
+   return arr[n];
+}
+
+탑다운 (재귀에서는 동일한 계산을 하지만 여기는 배열에 저장된 값을 리턴한다.)
+int[] dp = new int[100];
+
+public int fib(int n) {
+   if (n <= 1) {
+      return n;
+   }
+   if (dp[n] != 0) { // 메모이제이션
+      return dp[n];
+   }
+   dp[n] = fib(n - 1) + fib(n - 2);
+   return dp[n];
+}
+
+```
+
+[설명링크2](https://hongjw1938.tistory.com/47)
 ```java
 class Fibonacci{
     // DP 를 사용 시 작은 문제의 결과값을 저장하는 배열
