--- a/CodingTest/Programmers/Z_ETC/최소공배수 최대공약수.md
+++ b/CodingTest/Programmers/Z_ETC/최소공배수 최대공약수.md
@@ -1,12 +1,45 @@
 - 약수<br>
-어떤 수를 나누어 떨어뜨릴 수 있는 수
+어떤 수를 나누어 떨어뜨릴 수 있는 수 <br>
+[참고 링크](https://chwan.tistory.com/entry/Java-%EC%95%BD%EC%88%98%EC%9D%98-%EA%B0%9C%EC%88%98-%EA%B5%AC%ED%95%98%EA%B8%B0)
+    ```java
+    int i = 36;
+    int cnt = 0;
+    System.out.println(Math.sqrt(i)); //6
+    //제곱근까지 해서 약수쌍을 찾는다. 
+    for (int j = 1; j <= Math.sqrt(i); j++) {
+        if (i % j == 0) {
+            cnt++;
+            System.out.println(j + "//" + (i / j));
+            if (j != i / j) { //약수쌍이 같다면 증가를 하지 않는다.
+                cnt++;
+            }
+        }
+    }
+    //약수쌍
+    1//36
+    2//18
+    3//12
+    4//9
+    6//6
+    ```
+
+    ```java
+    //좋아요 많이 받은 코드
+    int[] count = new int[number + 1];    
+    for (int i = 1; i <= number; i++) {
+        for (int j = 1; j <= number / i; j++) {
+            count[i * j]++;
+        }
+    }
+    ```
 
 - 소수<br>
 1과 자기 자신 이외에는 어떤 수로도 나누어 떨어지지 않는 수
 2, 3, 5, 7..<br>
 구하는 방법은 에라토스테네스의 체가 알고리즘에 가정 최적화 되어 있다.
-소수를 구할 때는 n의 제곱근까지 구한다. 
-https://nahwasa.com/entry/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98-%EC%B2%B4-%ED%98%B9%EC%9D%80-%EC%86%8C%EC%88%98%ED%8C%90%EC%A0%95-%EC%8B%9C-%EC%A0%9C%EA%B3%B1%EA%B7%BC-%EA%B9%8C%EC%A7%80%EB%A7%8C-%ED%99%95%EC%9D%B8%ED%95%98%EB%A9%B4-%EB%90%98%EB%8A%94-%EC%9D%B4%EC%9C%A0
+소수를 구할 때는 n의 제곱근까지 구한다. <br>
+[참고 링크](
+https://nahwasa.com/entry/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98-%EC%B2%B4-%ED%98%B9%EC%9D%80-%EC%86%8C%EC%88%98%ED%8C%90%EC%A0%95-%EC%8B%9C-%EC%A0%9C%EA%B3%B1%EA%B7%BC-%EA%B9%8C%EC%A7%80%EB%A7%8C-%ED%99%95%EC%9D%B8%ED%95%98%EB%A9%B4-%EB%90%98%EB%8A%94-%EC%9D%B4%EC%9C%A0)
 
 - 최대공약수 (Greatest Common Divisor, GCD)<br>
 두 수의 공약수는 두 수 모두의 약수 중에서 공통적으로 포함하는 약수를 말합니다. 
