--- a/Java/상속.md
+++ b/Java/상속.md
@@ -147,6 +147,40 @@ public class BasicClassExtends extends BasicClass {
 }
 ```
 
+- 자동 타입 변환
+    - 부모타임 변수 <- 자식타입객체로 사용하고 동일한 객체를 참조한다.
+    - 자식이 상속을 받으면 부모 메소드에 접근이 가능하지만 이 방식은 부모가 자식 메소드에 접근하지 못 한다.
+    - 부모 메소드를 override 했을 경우 자식 메소드가 실행된다.
+```java
+public class BasicClass {
+    public void overrideTest() { 
+        System.out.println("parent overrideTest");
+    }
+}
+
+public class BasicClassExtends extends BasicClass {
+    @Override
+    public void overrideTest() {
+        System.out.println("child overrideTest");
+    }
+    
+    public void childMethod() {
+        System.out.println("child method");
+    }
+}
+
+public static void main(String[] args) {
+    BasicClassExtends basicClassExtends = new BasicClassExtends();
+    basicClassExtends.overrideTest(); //child overrideTest
+
+    BasicClass basic = basicClassExtends;
+    basic.overrideTest();  //child overrideTest <- override가 되었기 때문에 자식 메소드가 실행된다
+
+    basicClassExtends.childMethod();
+    // basic.childMethod(); <- 자식 메소드는 실행하지 못 한다.
+}
+```
+
 ## Composition
 
 - 합성, 조합 두 가지로 부르는 듯 하다.
