--- a/Java/상속.md
+++ b/Java/상속.md
@@ -148,7 +148,7 @@ public class BasicClassExtends extends BasicClass {
 ```
 
 - 자동 타입 변환
-    - 부모타임 변수 <- 자식타입객체로 사용하고 동일한 객체를 참조한다.
+    - 부모타입 변수 <- 자식타입객체로 사용하고 동일한 객체를 참조한다.
     - 자식이 상속을 받으면 부모 메소드에 접근이 가능하지만 이 방식은 부모가 자식 메소드에 접근하지 못 한다.
     - 부모 메소드를 override 했을 경우 자식 메소드가 실행된다.
 ```java
@@ -177,8 +177,16 @@ public static void main(String[] args) {
     basic.overrideTest();  //child overrideTest <- override가 되었기 때문에 자식 메소드가 실행된다
 
     basicClassExtends.childMethod();
-    // basic.childMethod(); <- 자식 메소드는 실행하지 못 한다.
+    // basic.childMethod(); <- 자식 메소드는 호출하지 못 한다.
 }
+```
+
+- 강제 타입 변환
+    - 부모 <- 자식을 했을 때 자식 메소드를 실행하지 못 하기 때문에 부모 -> 자식으로 다시 변환하여 사용할 수 있다.
+```java
+BasicClass basic = new BasicClassExtends(); //자동 타입 변환
+BasicClassExtends basicClassExtends = basic; //안 됨
+BasicClassExtends basicClassExtends = (BasicClassExtends) basic; //강제 타입 변환
 ```
 
 ## Composition
