--- a/SQLD/ch1/데이터 모델링의 이해.md
+++ b/SQLD/ch1/데이터 모델링의 이해.md
@@ -2,4 +2,15 @@
 
 - 모델링의 특징  
 추상화, 단순화, 명확화
-
+---
+- 모델링의 3가지 관점  
+데이터 관점, 프로세스 관점, 데이터와 프로세스의 상관 관점
+---
+- 데이터 품질을 보장하기 위해 유의사항  
+중복, 비유연성, 비일관성
+---
+- 모델링의 3단계(개 - 논 - 물)
+1. 개념적 데이터 모델링: 추상화 레벨이 가장 높고 포괄적인 수준의 모델링
+2. 논리적 데이터 모델링: 재사용성이 가장 높은 모델링으로 key, 속성, 관계 등을 모두 표현
+3. 물리적 데이터 모델링: 실제로 데이터베이스를 구현할 수 있도록 성능이나 가용성 등 물리적인 성격을 고려하여 표현하는 단계
+---
