--- a/SQLD/ch1/데이터 모델링의 이해.md
+++ b/SQLD/ch1/데이터 모델링의 이해.md
@@ -14,3 +14,23 @@
 2. 논리적 데이터 모델링: 재사용성이 가장 높은 모델링으로 key, 속성, 관계 등을 모두 표현
 3. 물리적 데이터 모델링: 실제로 데이터베이스를 구현할 수 있도록 성능이나 가용성 등 물리적인 성격을 고려하여 표현하는 단계
 ---
+- 데이터의 독립성(왜(외) - 놈(논) - 괴(개) - 물 - 내)
+1. 외부 스키마: View 단계로 여러 개의 사용자 관점으로 구성  
+논리적 데이터 독립성: 개념 스키마가 변경되어도 외부 스키마는 영향 X
+2. 개념 스키마: 모든 사용자 관점을 통합한 조직 전체 관점의 통합적인 표현  
+물리적 데이터 독립성: 내부 스키마가 변경되어도 외부/개념 스키마는 영향X
+3. 내부 스키마: 물리적인 저장 구조를 나타내는 것
+   #### * 독립성은 다음 단계의 스키마가 변경 되어도 이전 스키마는 영향이 없다
+--- 
+- ERD 작성 순서  
+(엔터티) - 1. 도출 - 2. 배치 - 3. 관계 설정  
+(관계) - 5. (관계)명기입 - 6. 참여도 기입 - 7. 필수/선택 기입
+--- 
+- ERD 표기법  
+<img src="../Img/ERD 표기법.png" /><br>
+1. 엔터티
+2. 1개
+3. 0개
+4. 2개 이상
+5. 부모 덴터티의 식별자가 자식 엔터티의 주식별자(식별자 관계) - 실선
+6. 부모 엔터티의 식별자가 자식 엔터티의 일반 속성(비식별자 관계) - 점선
