--- a/SQLD/ch1/데이터 모델링의 이해.md
+++ b/SQLD/ch1/데이터 모델링의 이해.md
@@ -32,5 +32,72 @@
 2. 1개
 3. 0개
 4. 2개 이상
-5. 부모 덴터티의 식별자가 자식 엔터티의 주식별자(식별자 관계) - 실선
+5. 부모 엔터티의 식별자가 자식 엔터티의 주식별자(식별자 관계) - 실선
 6. 부모 엔터티의 식별자가 자식 엔터티의 일반 속성(비식별자 관계) - 점선
+---
+- 엔터티: Table, 인스턴스: Row, 속성: Column
+---
+- 엔터티 특징
+1. 업무에서 쓰이는 정보
+2. 유니크함을 보장하는 식별자
+3. 2개 이상의 인스턴스를 가지고 있어야 함
+4. 반드시 속성을 가지고 있어야 함
+5. 다른 엔터티와 1개 이상의 관계를 가지고 있어야 함
+
+- 엔터티의 분류
+  - 유형 vs 무형 (유 - 개 - 사)
+  1. 유형 엔터티: 물리적인 형태 존재 (상품, 회원 등)
+  2. 개념 엔터티: 물리적인 형태 없음 개념적 (부서, 학과 등)
+  3. 사건 엔터티: 행위를 함으로써 발생, 통계 자료 (주문, 이벤트 응모 등) 
+  - 발생시점 (발 - 기 - 중 - 해)
+  1. 기본 엔터티: 독립전인 생성, 자신만의 주식별자 가짐, 다른 엔터티의 부모 역할
+  2. 중심 엔터티: 기본 엔터티로부터 파생되어 많은 정보를 가짐, 행위 엔터티를 생성
+  3. 행위 엔터티: 두 개 이상의 부모 엔터티로부터 파생되고 상세 설계단계에서 많이 도출
+
+- 엔터티 이름 주의
+1. 업무에서 실제로 쓰여야 함
+2. 한글은 약어 사용하지 않고 영문은 대문자로
+3. 단수 명사로 표현 띄어쓰기 X
+4. 다른 엔터티와 의미상으로 중복 X
+5. 해당 엔터티가 가지고 있는 데이터가 무엇인지 명확하게 표현
+
+---
+- 속성: 엔터티의 특징을 나타내는 최소의 데이터 단위로 더 이상 쪼개지지 않아야 한다.
+- 속성값: 속성은 1개의 속성값을 가진다. 직업이 배우, 가수이면 테이블을 분리해서 처리해야 한다.
+- 엔터티, 인스턴스, 속성, 속성값의 관계
+0. 엔터티 ⊃ 인스턴스 ⊃ 속성
+1. 한 개의 엔터티는 두 개 이상의 인스턴스를 갖는다.
+2. 한 개의 인스턴스는 두 개 이상의 속성을 갖는다.
+3. 한 개의 속성은 하나의 속성값을 갖는다.
+
+--- 
+- 특성에 따른 분류 (특 - 기 - 설 - 파)
+1. 기본속성: 설계, 파생을 제외한 나머지
+2. 설계속성: 동일 학과에 동명이인이 있으면 유니크하지 않다. 그래서 학번이라는 설계속성을 부여한다.
+3. 파생속성: 재고를 파악하기 위해 주문이력으로 하면 오래 걸린다. 그래서 재고 테이블을 따로 두고 상품의 품절 여부를 알려준다.
+- 구성방식에 따른 분류
+1. PK 속성: 엔터티에 속한 인스턴스에 유니크함을 부여
+2. FK 속성: 다른 엔터티와 관계를 맺게 해주는 매개체 (NULL 가능)
+3. 일반 속성: PK, FK 제외한 나머지
+
+--- 
+도메인: 속성이 가질 수 있는 속성값의 범위 (데이터 타입, 크기)
+- 용어사전: 속성 정할 때 용어에 대한 혼란을 없애기 위해서
+- 시스템 카탈로그: 시스템 테이블 (SELECT만 가능)
+---
+관계  
+- 존재 관계  
+엄마와 아기처럼 존재 자체로 연관성이 있는 관계 (직원(M) - 부서(1), 학생(M) - 학과(1))
+- 행위 관계
+특정한 행위를 함으로써 연관성이 생기는 관계 (회원(1) - 주문(M), 학생(1) - 출석부(M))
+  #### * 차이는 없지만 책에 따라서 N 대신 M으로 사용
+
+- 표기법  
+1. 관계명: 관계의 이름  
+바람직하지 않은 관계명: 연관성이 있다, 관계가 있다, 출석을 했다  
+바람직한 관계명: 주문한다, 소속된다, 출석을 한다.
+2. 관계차수: 관계에 참여하는 수  
+1:1, 1:M, M:N
+3. 관계선택사양  
+필수: 참여자가 반드시 존재 (주문을 하려면 주문상품이 있어야 한다)  
+선택: 참여자가 없을 수 있음 (출석을 부르는데 출석여부는 학생이 정한다)
