Update 데이터 모델링의 이해.md

--- a/SQLD/ch1/데이터 모델링의 이해.md
+++ b/SQLD/ch1/데이터 모델링의 이해.md
@@ -101,3 +101,27 @@
 3. 관계선택사양  
 필수: 참여자가 반드시 존재 (주문을 하려면 주문상품이 있어야 한다)  
 선택: 참여자가 없을 수 있음 (출석을 부르는데 출석여부는 학생이 정한다)
+---
+식별자: 인스턴스를 구분할 수 있게 하는 거
+- 주식별자
+1. 유일성: 유니크함
+2. 최소성: 유일성을 보장하는 최소 개수의 속성(많으면 안 좋음)
+3. 불변성: 변하지 않아야 함
+4. 존재성: Null X
+
+- 분류  
+:star:  
+:star:
+
+1. 대표성  
+주식별자: 다른 엔터티와 참조로 연결  
+보조식별자: 다른 엔터티와 참조로 연결되지 않음 (구분용정도)
+2. 스스로 생성되었는지  
+내부식별자: 엔터티 내부에서 스스로 생성  
+외부식별자: 다른 엔터티에서 온 식별자로 연결고리 역할
+3. 단일 속성 여부  
+단일식별자: 하나의 속성으로 구성  
+복합식별자: 두 개 이상
+4. 대체 여부  
+본질식별자: 가공되지 않은 식별자로 원조식별자라고도 함  
+인조식별자: 주식별자 속성이 2개 이상일 때 묶어서 사용하는 것으로 대리식별자라고도 함
