--- a/SQLD/ch1/데이터 모델링의 이해.md
+++ b/SQLD/ch1/데이터 모델링의 이해.md
@@ -6,7 +6,7 @@
 - 모델링의 3가지 관점  
 데이터 관점, 프로세스 관점, 데이터와 프로세스의 상관 관점
 ---
-- 데이터 품질을 보장하기 위해 유의사항  
+- 데이터 품질을 보장하기 위해 유의사항(지양)  
 중복, 비유연성, 비일관성
 ---
 - 모델링의 3단계(개 - 논 - 물)
@@ -110,8 +110,7 @@
 4. 존재성: Null X
 
 - 분류  
-:star:  
-:star:
+:star::star: 헷갈림 :star::star:
 
 1. 대표성  
 주식별자: 다른 엔터티와 참조로 연결  
@@ -125,3 +124,42 @@
 4. 대체 여부  
 본질식별자: 가공되지 않은 식별자로 원조식별자라고도 함  
 인조식별자: 주식별자 속성이 2개 이상일 때 묶어서 사용하는 것으로 대리식별자라고도 함
+
+- 추가 설명  
+
+  | 회원번호 | 
+  | ------- |
+  | 회원명 |
+  | ID | 
+
+  회원번호: 주, 내부, 단일, 본질  
+  아이디: 보조 
+
+  ---
+
+  | 주문번호 | 
+  | ------- |
+  | 회원번호(FK) | 
+  | 주문일자 | 
+
+  주문번호: 주, 내부, 단일, 인조 (일자 + 순번)
+  회원번호: 외부
+
+  ---
+  단순하게 기본키가 2개 이상: 주, 복합, 본질 **(여기는 내부가 포함되지 않음)**
+
+---
+- 식별자  
+부모 엔터티의 식별자가 자식 엔터티의 주식별자가 되는 관계  
+자식이 있으면 부모는 반드시 존재해야하고 단일이면 1:1, 복합이면 1:M
+- 비식별자  
+부모 엔터티의 식별자가 자식 엔터티의 주식별자가 아닌 일반 속성이 되는 관계  
+일반 속성은 NULL이 될 수 있기 때문에 자식이 있어도 부모가 삭제되고 반대로도 가능하다. 
+
+  | |식별자 | 비식별자 | 
+  |-|------- | ------- |
+  | 관계 |강한 | 약한 |
+  | 부모 엔터티의 식별자가 자식 엔터티의 | 주식별자 | 일반속성 |
+  | 부모 엔터티가 | 있어야 생성 가능 | 없어도 생성 가능 |
+  | 표현 | 실선 | 점선 |
+
