--- a/ETC/단순참고.md
+++ b/ETC/단순참고.md
@@ -13,3 +13,9 @@ const elementById = document.querySelector('#elementId');
 const elementsByClass = document.querySelectorAll('.elementClass');
 const elementsByName = document.querySelectorAll('[name="elementName"]');
 ```
+
+form-group 없으면 아래 공백 사라짐  
+form-control는 부트스트랩 양식으로  
+
+버튼 인라인 확인  
+부등호 비교 확인
