--- a/ETC/코딩규칙.md
+++ b/ETC/코딩규칙.md
@@ -1,15 +1,15 @@
 # 규칙
 
 ### Java
+
 Space: 4  
-간격도 다 띄우기  
-카멜케이스
+간격도 다 띄우기
 
 ```java
 if (exp == null) {
     return false;
 }
- 
+
 for (char ch : exp.toCharArray()) {
     ....
 }
@@ -20,12 +20,15 @@ private int minValue = 0;
 ```
 
 ### frontEnd
-공통  
-- Space: 2  
+
+공통
+
+- Space: 2
 - 따옴표 사용
 - 홑따옴표는 따옴표 안에서 사용할 때
 
 네이밍
+
 - name: camel case
 - class: kebab-case
 - id: camel case
@@ -35,14 +38,12 @@ private int minValue = 0;
 ```
 
 ```css
-<a class="maia-button maia-button-secondary">Sign in</a>
- 
-html {
-  font-family: 'open sans', arial, sans-serif; /* font-family는 따옴표 사용할 수 없으니 홑따옴표 */
+<a class="maia-button maia-button-secondary" > Sign in</a > html {
+  font-family: "open sans", arial, sans-serif; /* font-family는 따옴표 사용할 수 없으니 홑따옴표 */
 }
 ```
 
-```  
+```
 설명(GPT 답변임)
 id
 - 고유 식별자: 각 id 값은 HTML 문서 내에서 유일해야 합니다
@@ -62,30 +63,37 @@ class
 
 추가 참고  
 id
+
 - 1개만 지정
 - 스타일 지정할 때는 사용하지 말 것 (레이아웃에서는 사용하고 진짜 특별히 지정해야 할 때만)
 - 보통 버튼에서 많이 사용하는 듯
 - 1개만 지정가능하다.
 
 name
+
 - 고민했는데 name은 form submit할 때 VO랑 연결해야해서 camel로
 
 기타
-- 네이밍은 형태_의미_순서_상태
+
+- 네이밍은 형태*의미*순서\_상태
 - 3개를 넘지 않는다.
 
 레이아웃
+
 - #container: 페이지를 감싸는 전체 영역
 - #header: 머리글 영역
 - #content: 본문 영역
 - #footer: 바닥글 영역
 
 ### 파일명
-image: underbar -> search_on.jpg  
-css: kebab-case  
-js: kebab-case  
-jsp: 고민 중
 
+- image: underbar -> search_on.jpg
+- css: kebab case
+- js: kebab case
+- java: pascal case
+- jsp: camel case
+  - commonCSS는 별로라서 common_css
+- 패키지명:
 
-추가
-btn 언제 붙이는지 보통 class지정할 떄 하는듯? 
+추가  
+리스트, 삭제, 저장, 수정 상태 등
