--- a/ETC/코딩규칙.md
+++ b/ETC/코딩규칙.md
@@ -64,18 +64,19 @@ class
 추가 참고  
 id
 
-- 1개만 지정
-- 스타일 지정할 때는 사용하지 말 것 (레이아웃에서는 사용하고 진짜 특별히 지정해야 할 때만)
-- 보통 버튼에서 많이 사용하는 듯
+- 스타일 지정할 때는 사용하지 말 것 (레이아웃에서는 사용 가능)
+- 이벤트 걸 때 주로 사용
 - 1개만 지정가능하다.
 
 name
 
 - 고민했는데 name은 form submit할 때 VO랑 연결해야해서 camel로
+- form 데이터를 넘기는 경우는 id보다는 name
 
 기타
 
-- 네이밍은 형태 - 의미 - 순서 - 상태
+- 네이밍은 형태 - 의미 - 상태
+- btn_apply_on, box_news, box_reply_open 등
 - 3개를 넘지 않는다.
 
 레이아웃
@@ -94,6 +95,15 @@ name
 - jsp: camel case
   - commonCSS는 별로라서 common_css
 - 패키지명:
+
+```javascript
+//따옴표 참고
+var param = "아";
+document.body.innerHTML += "<button onclick=\"hi('" + param + "')\">클릭</button>";
+document.body.innerHTML += "<button onclick=\"hi('" + param + "')\">클릭</button>";
+//리터널
+document.body.innerHTML += `<button onclick="hi('${param}')">클릭</button>`;
+```
 
 추가  
 리스트, 삭제, 저장, 수정 상태 등
